<resources>
    <string name="app_name">TopMoviesFavs</string>
    <string name="topMovieList">View Top Movie List</string>
    <string name="addMovie">Add Movie</string>
    <string name="deleteMovie">Delete Movie</string>
    <string name="changeMovie">Change Movie Rating</string>
    <string name="searchMovie">Search Movie</string>
    <string name="creds">Created by: Joe Vrolijk - HvA - 500791806 - fdmci_idtmd</string>
    <string name="released">Released: %s</string>
    <string name="yourRating">Enter your personal rating (0-10)</string>
    <string name="addToList">Add to list</string>
    <string name="cancel">Cancel</string>
    <string name="plot">Plot</string>
    <string name="editMovie">Edit Movie</string>
    <string name="personalRating">Personal Rating: </string>
    <string name="publicRating">Public Rating: </string>
    <string name="swipe">Swipe to left to delete movie</string>
    <string name="changeRating">Click on a movie to change your personal rating</string>
    <string name="changePersonalRating">Change Rating</string>
    <string name="rateApp">Rate our app</string>
    <string name="aboutUs">About Us</string>
    <string name="aboutText">This Application is made by Joe Vrolijk (500791806) - Student of the Part-Time Class of the minor Mobile Development.</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
